# pc2pin

./: CMakeLists.txt  LICENSE  README.md  pin2serial.cpp  pin2serial.py  pin2wifi.py
Arduino/serialMirror/: serialMirror.ino
Pico/serial2pin/: CMakeLists.txt  serial2pin.c  serial2pin.cpp
Pico/serialMirror/: CMakeLists.txt  serial2pin.cpp  serialMirror.cpp
SerialCpp/: CMakeLists.txt  SimpleSerial.cpp  SimpleSerial.h
serial2pin/: config.h  serial2pin.ino
wifi2pin/: config.h  wifi2pin.ino
